--- a/client/src/components/Login/SignIn.css
+++ b/client/src/components/Login/SignIn.css
@@ -28,9 +28,14 @@
     border-radius: 8px;
     border: none;
     font-size: 16px;
-    box-shadow: 3px 3px 10px rgba(0,0,0,.8)
+    box-shadow: 3px 3px 10px rgba(0,0,0,.8);
+    cursor: pointer;
 }
 
 .signInBox span{
     color: rgb(107, 105, 105);
+}
+
+.signInBox p{
+    color: red;
 }
