--- a/client/src/components/Peers/Peers.css
+++ b/client/src/components/Peers/Peers.css
@@ -1,30 +1,34 @@
-.container{
+.my_container{
     display: flex;
     justify-content: center;
     align-items: center;
-  }
-  
-  .container .card{
+    z-index: 10;
+}
+
+.my_card {
     background-color:#f8f8f8;
     /* z-index: 20; */
-    height: 300px;
-    width: 300px;
+    height: 600px;
+    width: 400px;
     border: 2px solid black;
     border-radius: 4px;
     margin: 14px;
     padding: 15px;
-  }
-  
-  .card .listname li{
+}
+
+.my_card .listname li{
     display: flex;
     justify-content: space-between;
   }
   
-  .card h2{
+  .my_card h2{
+    text-align: center;
+  }
+  .my_card h3{
     text-align: center;
   }
   
-  .container > .card > .addData{
+  .my_card > .my_card > .addData{
       display: flex;
       justify-content: center;
   }
